--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "bun run app/main.ts",
-    "test": "mocha --loader=ts-node/esm 'test/**/*.ts'"
+    "test": "mocha --loader=ts-node/esm --experimental-specifier-resolution=node 'test/**/*.ts'"
+
   },
   "devDependencies": {
     "@types/bun": "latest",
